[gd_scene load_steps=24 format=3 uid="uid://mnwppambet7"]

[ext_resource type="Script" uid="uid://b3g5atumyrird" path="res://systems/health/health.gd" id="1_c6ohe"]
[ext_resource type="Script" uid="uid://dnk7qpnb8l0ud" path="res://elements/enemy/bosses/pirulito/ai_enemy_boss_pirulito.gd" id="1_efxxa"]
[ext_resource type="PackedScene" uid="uid://cux5kcyvhvhq4" path="res://modules/text_flow/scenes/text_flow_player_bubbles.tscn" id="2_iwdqt"]
[ext_resource type="Script" uid="uid://dj2x7ekyg32b7" path="res://systems/score/score_giver.gd" id="2_la1mn"]
[ext_resource type="PackedScene" uid="uid://ywymskkj85vs" path="res://elements/vfx/vfx_explosion/vfx_explosion.tscn" id="2_y0lkq"]
[ext_resource type="PackedScene" uid="uid://d30kpprvaaie3" path="res://elements/vfx/vfx_pillar_of_light/vfx_pillar_of_light.tscn" id="3_g5xv5"]
[ext_resource type="WwiseEvent" uid="uid://rwtfewvjq8uk" path="res://Wwise/resources/Event/{33AD2026-0B98-4B95-AD48-5EC219C79078}.tres" id="4_an0uv"]
[ext_resource type="Script" uid="uid://cqfrebajleh0n" path="res://elements/enemy/projectiles/damage_area/damage_body.gd" id="5_s3avt"]
[ext_resource type="WwiseEvent" uid="uid://cmj4hq2wsd22b" path="res://Wwise/resources/Event/{BC327089-902B-416B-B5FE-63D1EEBDC438}.tres" id="5_vqpih"]
[ext_resource type="PackedScene" uid="uid://c0mouclb7du2" path="res://elements/enemy/bosses/pirulito/pirulito_graphic.tscn" id="6_t5phd"]
[ext_resource type="WwiseEvent" uid="uid://c1831pi3v3c6k" path="res://Wwise/resources/Event/{20B75A65-37F0-4AE9-88BF-229EE8118A27}.tres" id="6_vqpih"]
[ext_resource type="Resource" uid="uid://buu4r0q31qb44" path="res://systems/time/frame_freeze_big.tres" id="7_oj1j5"]
[ext_resource type="Script" uid="uid://dsvfipg4mxr7k" path="res://systems/line3d/child_line_3d.gd" id="8_1ft25"]
[ext_resource type="PackedScene" uid="uid://y8flfks2eb4j" path="res://elements/enemy/bosses/hand/boss_hand_eva_shield.tscn" id="8_8veb8"]
[ext_resource type="Script" uid="uid://c04hf1fjmqgil" path="res://elements/enemy/projectiles/damage_area/damage_node.gd" id="8_46yar"]
[ext_resource type="PackedScene" uid="uid://co2tidadm6ags" path="res://elements/enemy/bosses/pirulito/pirulito_piece/mesh_pirulito_destroyed.tscn" id="8_75ahh"]
[ext_resource type="Material" uid="uid://bcynsolj53nkk" path="res://elements/general_use/material/m_magenta_shield_pink.tres" id="9_o40xy"]
[ext_resource type="Material" uid="uid://or7d75qj406g" path="res://elements/general_use/material/m_magenta_shield.tres" id="10_hpwq6"]
[ext_resource type="Resource" uid="uid://bf21ste5qmn0b" path="res://elements/score/score_info_boss_pirulito.tres" id="11_t74o8"]
[ext_resource type="PackedScene" uid="uid://ogo51q0i36xw" path="res://elements/enemy/projectiles/cannon/enemy_cannon_invisible.tscn" id="19_4s6qg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_chhmr"]
size = Vector3(3.5, 3.25, 3.15)

[sub_resource type="SphereMesh" id="SphereMesh_hpwq6"]
material = ExtResource("10_hpwq6")
radius = 3.5
height = 6.0
radial_segments = 32
rings = 16
is_hemisphere = true

[sub_resource type="BoxShape3D" id="BoxShape3D_komvr"]
size = Vector3(1.20123, 1.27832, 6.21381)

[node name="EnemyBossPirulito" type="Node3D" node_paths=PackedStringArray("_flow_player", "cannon_middle_surprise", "copter_lines")]
script = ExtResource("1_efxxa")
posteShotDirectionRight = Vector3(0.45, 0, 1)
_flow_player = NodePath("TextFlowPlayerBubbles")
vfx_explosion = Array[PackedScene]([ExtResource("2_y0lkq")])
vfx_pointed_explosion = Array[PackedScene]([ExtResource("3_g5xv5")])
cannon_middle_surprise = NodePath("Final Cannon")
amount_life_phase_2 = 33.0
copter_lines = [NodePath("CopterLine1")]

[node name="Sounds" type="Node3D" parent="."]

[node name="SFX_FirstPhase" type="AkEvent3D" parent="Sounds"]
event = ExtResource("4_an0uv")

[node name="SFX_SecondPhase" type="AkEvent3D" parent="Sounds"]
event = ExtResource("5_vqpih")

[node name="SFX_Death" type="AkEvent3D" parent="Sounds"]
event = ExtResource("6_vqpih")

[node name="TextFlowPlayerBubbles" parent="." instance=ExtResource("2_iwdqt")]

[node name="Vulnerable Body" type="StaticBody3D" parent="." groups=["enemy_position"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
collision_layer = 4
collision_mask = 0

[node name="Health" type="Node" parent="Vulnerable Body" node_paths=PackedStringArray("feedback")]
unique_name_in_owner = true
script = ExtResource("1_c6ohe")
max_amount = 84.0
feedback = [NodePath("../../pirulito")]
feedback_scale_multiplier = Vector3(0.05, -0.1, 0.05)
frame_freeze_on_death = ExtResource("7_oj1j5")
feedback_deepness = 8
feedback_ignore_contains_divided_by_commas = "screen,_no"

[node name="ScoreGiver" type="Node" parent="Vulnerable Body" node_paths=PackedStringArray("health", "point_position")]
script = ExtResource("2_la1mn")
info = ExtResource("11_t74o8")
health = NodePath("../Health")
point_position = NodePath("../ScoreOrigin")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Vulnerable Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -1.5)
shape = SubResource("BoxShape3D_chhmr")

[node name="ScoreOrigin" type="Node3D" parent="Vulnerable Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 1.25)

[node name="BossHand_Eva_Shield" parent="." instance=ExtResource("8_8veb8")]
transform = Transform3D(1.2, 0, 0, 0, 1.5, 0, 0, 0, 1.305, 0, 0.75, 0.625)
min_transparency = 0.76

[node name="CollisionShape3D" parent="BossHand_Eva_Shield" index="1"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)

[node name="MeshInstance3D" parent="BossHand_Eva_Shield" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.712668, -0.255832)
material_override = ExtResource("9_o40xy")
mesh = SubResource("SphereMesh_hpwq6")

[node name="Damage Body" type="Area3D" parent="." groups=["enemy_position"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
collision_layer = 0
collision_mask = 2

[node name="DamageNode" type="Node" parent="Damage Body" node_paths=PackedStringArray("origin")]
script = ExtResource("8_46yar")
origin = NodePath("../..")
metadata/_custom_type_script = "uid://c04hf1fjmqgil"

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Damage Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -1.5)
shape = SubResource("BoxShape3D_chhmr")

[node name="Shield Body" type="CharacterBody3D" parent="."]
collision_layer = 4
collision_mask = 10
script = ExtResource("5_s3avt")

[node name="Box Side" type="CollisionShape3D" parent="Shield Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.61423, 0.57959, 0.113678)
shape = SubResource("BoxShape3D_komvr")

[node name="Box Side2" type="CollisionShape3D" parent="Shield Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.63917, 0.57959, 0.113678)
shape = SubResource("BoxShape3D_komvr")

[node name="GlobalShotOrigin" type="Marker3D" parent="Shield Body"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 1.86235)

[node name="ArmSpaceR" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 3, 0)

[node name="ArmSpaceL" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 3, 0)

[node name="pirulito" parent="." instance=ExtResource("6_t5phd")]

[node name="GPUParticlesAttractorSphere3D" type="GPUParticlesAttractorSphere3D" parent="pirulito"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
strength = 15.0
attenuation = 1.18921
directionality = 0.5
radius = 30.0

[node name="pirulito_destroyed" parent="." instance=ExtResource("8_75ahh")]
visible = false

[node name="Nando Destination" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0, 2.75)

[node name="Explosion Region" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.627409, 0)
aabb = AABB(-3.05248, -0.484312, -3.25, 6.11668, 0.968625, 6.5)

[node name="lights_parent" type="Node3D" parent="."]

[node name="CopterLine1" type="Node3D" parent="."]
script = ExtResource("8_1ft25")

[node name="CopterNode1" type="Node3D" parent="CopterLine1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 1.5)

[node name="CopterNode2" type="Node3D" parent="CopterLine1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 1.5)

[node name="CopterNode3" type="Node3D" parent="CopterLine1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -3)

[node name="CopterNode9 height" type="Node3D" parent="CopterLine1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 4.25, -3)

[node name="CopterNode4 height" type="Node3D" parent="CopterLine1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 4.25, -4)

[node name="CopterNode5 height" type="Node3D" parent="CopterLine1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.25, 4.25, -4)

[node name="CopterNode6 height" type="Node3D" parent="CopterLine1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 4.25, -3)

[node name="CopterNode10" type="Node3D" parent="CopterLine1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -3)

[node name="CopterNode7" type="Node3D" parent="CopterLine1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 1.5)

[node name="CopterNode8" type="Node3D" parent="CopterLine1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 1.5)

[node name="Final Cannon" parent="." instance=ExtResource("19_4s6qg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 2.25)
delayBetweenProjectiles = 4.125
projectile_speed_multiplier = 0.75

[connection signal="dead" from="Vulnerable Body/Health" to="." method="_on_health_dead"]
[connection signal="hit" from="Vulnerable Body/Health" to="." method="_on_health_hit"]
[connection signal="area_entered" from="Damage Body" to="Damage Body/DamageNode" method="add_area"]
[connection signal="area_exited" from="Damage Body" to="Damage Body/DamageNode" method="remove_area"]
[connection signal="body_entered" from="Damage Body" to="Damage Body/DamageNode" method="add_body"]
[connection signal="body_exited" from="Damage Body" to="Damage Body/DamageNode" method="remove_body"]

[editable path="BossHand_Eva_Shield"]
